CSS fix for alignment of footer and footer items/links

--- a/code/apps/Managed Software Center/Managed Software Center/WebResources/base.css
+++ b/code/apps/Managed Software Center/Managed Software Center/WebResources/base.css
@@ -308,7 +308,7 @@ footer {
 }
 
 footer div.bottom-links {
-    margin: 0 35px 0 0;
+    margin: 0 0 0 0;
     border-top: 1px solid #d3d7db;
     position: relative
 }
